# spiralife

./: README.md  jest.config.mjs  package-lock.json  package.json  pyproject.toml  webpack.config.cjs
javascript/: README.md  package-lock.json  package.json  webpack.config.js
javascript/src/: add_event_listeners.js  apply_zoom.js  create_calendar_svg.js  index.html  load_app_elements.js  main.js  style.css  update_calendar_view.js
python/: .gitignore  README.md  pyproject.toml
python/.run_without_installation/: run_spiralife.py
src/: add_event_listeners.js  coordinate_transformation.js  index.html  load_app_elements.js  main.js  style.css
src/spiralife/: __init__.py  calendar.py  main.py
src/spiralife/tests/: test_calendar.py
tests/: coordinate_transform.test.js  seleniumtest.test.js  test_calendar.py
