[build-system]
requires = ["setuptools"]

[project]
name = "spiralife"
version = "0.0.1"
description = "A spiral calendar"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "pillow",
    "pycairo",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spiralife = "spiralife:main"

